compiler/src/test/resources/amyc/typer/passing/If.amy
object If
  if (true) { 1 } else { 2 };
  if (true) { "" } else { error("") };
  val x: Int = if (true) { 1 } else { 2 };
  x
end If
