compiler/src/test/resources/amyc/typer/failing/SeqError2.amy
object SeqError
  val x: Boolean = 1; 2; x
end SeqError
